tests/ui/target_modifiers/sanitizers-safestack-and-kcfi.missed_safestack.stderr
error: mixing `-Csanitize` will cause an ABI mismatch in crate `sanitizers_safestack_and_kcfi`
  --> $DIR/sanitizers-safestack-and-kcfi.rs:16:1
   |
LL | #![feature(no_core)]
   | ^
   |
   = help: the `-Csanitize` flag modifies the ABI so Rust crates compiled with different values of this flag cannot be used together safely
   = note: `-Csanitize=kcfi` in this crate is incompatible with `-Csanitize=safestack,kcfi` in dependency `safestack_and_kcfi`
   = help: set `-Csanitize=safestack,kcfi` in this crate or `-Csanitize=kcfi` in `safestack_and_kcfi`
   = help: if you are sure this will not cause problems, you may use `-Cunsafe-allow-abi-mismatch=sanitize` to silence this error

error: aborting due to 1 previous error

